# facultyai

./: LICENSE  Makefile  README.md  pyproject.toml
src/facultyai/: __main__.py
tests/: test_facultyai.py
