[project]
name = "facultyai"
description = "faculty.ai interview 2023-12-11"
authors = [
    { name = "Daniel Roythorne", email = "daniel.roythorne@astrazeneca.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
]
dynamic = ["version", "readme"]

[project.urls]
"Homepage" = "https://github.com/"

[project.scripts]
#facultyai = "facultyai:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1,<8",
    "ruff>=0.1.7,<2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "facultyai.__version__.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
